# pktflow

./: .gitattributes  Cargo.toml  Dockerfile  IDEAS.md  LICENSE  PRD.md  README.md  justfile
.github/workflows/: bench.yml  ci.yml  fuzz.yml
benches/: README.md
crates/pktflow-capture/: Cargo.toml  build.rs
crates/pktflow-capture/src/: error.rs  lib.rs  live.rs  offline.rs  source.rs
crates/pktflow-capture/tests/: live.rs  offline.rs  pump.rs
crates/pktflow-cli/: Cargo.toml  build.rs
crates/pktflow-cli/benches/: aggregator_memory.rs  dissect_aggregate.rs  dissect_only.rs  scale.rs  snapshot_cost.rs  throughput_floor.rs  unknown_diagnostics.rs
crates/pktflow-cli/src/: cli.rs  error.rs  lib.rs  main.rs  render.rs  run.rs  scaffold.rs  summary.rs  unknown_view.rs  views.rs
crates/pktflow-cli/tests/: drilldown.rs  fixture_corpus.rs  json_output.rs  packets_mode.rs  pcap_sanity.rs  reference_parity.rs  scale.rs  streams_view.rs  surface.rs  template_nesting.rs  unknown_command.rs  where_query.rs
crates/pktflow-cli/tests/golden/: drill-dns.txt  drill-gre.txt  drill-overflow-dns.txt  drill-tcp.txt  help-ifaces.txt  help-main.txt  help-packets.txt  help-stream.txt  help-streams.txt  help-unknown.txt  offline-json-gre.json  offline-json-tree.json  packets-base.txt  packets-v.txt  packets-vv.txt  streams-flat-tcp.txt  streams-gre.txt  streams-merged-ipv4.txt  streams-tree.txt  unknown-drilldown.txt  unknown-table.txt
crates/pktflow-cli/tests/support/: expected.rs  mod.rs  named_fixtures.rs  schema.rs
crates/pktflow-core/: Cargo.toml
crates/pktflow-core/src/: bytes.rs  context.rs  depth.rs  diagnostics.rs  engine.rs  error.rs  lib.rs  packet.rs  parser.rs  plugin.rs  route.rs  router.rs  stream.rs  value.rs
crates/pktflow-core/tests/: no_panic.rs
crates/pktflow-flows/: Cargo.toml
crates/pktflow-flows/src/: key.rs  lib.rs  rollup.rs  store.rs  unknown.rs
crates/pktflow-flows/tests/: eviction.rs  hierarchy.rs  ingest_alloc.rs  lifecycle.rs  query.rs  unknown.rs
crates/pktflow-plugins/: Cargo.toml
crates/pktflow-plugins/fuzz/: Cargo.toml
crates/pktflow-plugins/fuzz/fuzz_targets/: dissect.rs  dns_name.rs
crates/pktflow-plugins/src/: ah.rs  amqp.rs  arp.rs  bacnet_ip.rs  bfd.rs  bgp.rs  cdp.rs  dhcp.rs  dhcpv6.rs  dnp3.rs  dns.rs  dot11.rs  eapol.rs  enip.rs  erspan.rs  esp.rs  ethernet.rs  ftp.rs  geneve.rs  gre.rs  gtp_c.rs  gtp_u.rs  hsrp.rs  http.rs  icmpv4.rs  icmpv6.rs  igmp.rs  imap.rs  ipfix.rs  ipv4.rs  ipv6.rs  l2tpv3.rs  lacp.rs  lib.rs  llc.rs  lldp.rs  llmnr.rs  mdns.rs  mld.rs  modbus.rs  (+36 more)
crates/pktflow-plugins/tests/: application.rs  conformance.rs  datacenter.rs  dhcpv6.rs  discovery.rs  filemail.rs  gate_fuzz.rs  industrial.rs  ipv6_control_plane.rs  link.rs  network.rs  pipeline.rs  realtime.rs  routing.rs  telco.rs  transport.rs  tunnels.rs  wireless.rs
crates/pktflow-plugins/tests/kit/: mod.rs
crates/pktflow-testkit/: Cargo.toml
crates/pktflow-testkit/src/: lib.rs
crates/pktflow-tui/: Cargo.toml
crates/pktflow-tui/src/: app.rs  lib.rs  tree.rs  ui.rs
crates/pktflow-tui/tests/: scale.rs
crates/pktflow-view/: Cargo.toml
crates/pktflow-view/src/: fmt.rs  hub.rs  index.rs  json.rs  lib.rs  query.rs  stream_view.rs
crates/pktflow-web/: Cargo.toml
crates/pktflow-web/src/: api.rs  lib.rs
crates/pktflow-web/src/assets/: index.html
docs/: adding-a-protocol.md  query-language.md  tui-and-web.md  unknown-diagnostics.md
fixtures/real/: README.md  quic_unknown.pcap
schema/: streams-v1.json  unknown-v1.json
scripts/: check-bench-regression.py  check-boundaries.sh  webui-scale-check.mjs
specs/: CONSTITUTION.md  DECISIONS.md  README.md
specs/00-foundation/: 01-workspace.md  02-errors-robustness.md  03-ci-tooling.md  README.md
specs/01-core-types/: 01-metadata-values.md  02-layers-and-stacks.md  03-extraction-depth.md  04-parse-context.md  README.md
specs/02-plugin-contract/: 01-plugin-trait.md  02-hints.md  03-routing-metadata.md  04-stream-identity.md  README.md
specs/03-router/: 01-route-ids.md  02-router-builder.md  03-heuristic-fallback.md  04-gated-termination.md  README.md
specs/04-parser/: 01-lazy-iterator.md  02-entry-resolution.md  03-stop-reasons.md  README.md
specs/05-aggregator/: 01-flow-keys.md  02-stream-store.md  03-hierarchy.md  04-rollups.md  05-lifecycle.md  06-memory-eviction.md  07-query-api.md  README.md
specs/06-plugins/: 01-template.md  02-link.md  03-network.md  04-transport.md  05-tunnels.md  06-application.md  README.md
specs/07-capture/: 01-source-abstraction.md  02-offline.md  03-live.md  README.md
specs/08-cli/: 01-command-surface.md  02-streams-view.md  03-drilldown.md  04-packets-mode.md  05-rendering-json.md  README.md
specs/09-validation/: 01-plugin-test-kit.md  02-fixtures.md  03-e2e.md  04-benchmarks.md  README.md
specs/10-diagnostics/: 01-unknown-diagnostics.md  02-unknown-registry.md  03-unknown-command.md  README.md
specs/11-standard-library/: 01-link-lan.md  02-wireless-link.md  03-ipv6-control-plane.md  04-routing-protocols.md  05-tunnels-overlays-vpn.md  06-transport-extensions.md  07-security-auth-directory.md  08-web-rpc.md  09-file-mail-transfer.md  10-voice-video-realtime.md  11-network-management-telemetry.md  12-service-name-discovery.md  13-industrial-ot.md  14-datacenter-app-messaging.md  15-telco-cellular-core.md  README.md
specs/12-contrib-library/: 01-crate-and-registration.md  02-encap-flavours.md  03-netops-sdn-timing.md  04-security-flavours.md  05-legacy-lan.md  06-remote-access.md  07-databases.md  08-messaging-iot.md  09-media-p2p.md  10-storage-san.md  11-enterprise-printing.md  12-voip-flavours.md  13-industrial-flavours.md  14-dc-fabric-rpc.md  15-observability.md  16-gaming-consumer.md  README.md
specs/12-scale/: 01-incremental-snapshots.md  02-stream-memory-diet.md  03-condensation.md  04-windowed-view-api.md  05-scalable-web-ui.md  06-streaming-uploads.md  07-scale-benchmarks.md  README.md
