[package]
name = "pktflow-cli"
description = "The pktflow binary: streams view, drill-down, packet mode, JSON output"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pktflow"
path = "src/main.rs"

[dependencies]
pktflow-core.workspace = true
pktflow-flows.workspace = true
pktflow-plugins.workspace = true
pktflow-capture.workspace = true
thiserror.workspace = true
clap.workspace = true
ctrlc.workspace = true
serde_json.workspace = true

[dev-dependencies]
pktflow-testkit.workspace = true

[lints]
workspace = true
