[package]
name = "pktflow-plugins"
description = "Reference protocol plugin set and registration list"
version.workspace = true
edition.workspace = true

[dependencies]
pktflow-core.workspace = true
smallvec.workspace = true

[dev-dependencies]
# Test-only (09.1 kit: flow-key involution checks). The runtime dependency
# direction stays cli -> {flows, plugins} -> core; flows never sees plugins.
pktflow-flows.workspace = true

[lints]
workspace = true
